[package]
authors = ["eeeeeta <eeeeeta@users.noreply.github.com>"]
description = "A basic library to access gpsd that uses no C bindings."
documentation = "http://docs.rs/unbounded-gpsd"
license = "CC0-1.0"
name = "unbounded-gpsd"
readme = "README.md"
repository = "https://github.com/eeeeeta/unbounded-gpsd"
version = "0.4.1"

[dependencies]
error-chain = "0.10"
log = "0.3.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
